Fix button styles to work around the webkit button style on IOS. #MBL-10693

--- a/content/css/themes/crm/forms.less
+++ b/content/css/themes/crm/forms.less
@@ -408,6 +408,7 @@ button.clear-button:focus {
     outline: none;
     border: @button-border;
     .border-radius(@button-border-radius);
+    background-color: @button-bg-color;
 }
 
 .toolButton {
