--- a/content/css/themes/crm/variables.less
+++ b/content/css/themes/crm/variables.less
@@ -112,7 +112,7 @@
 @form-border: 1px solid @color-fields-border;
 
 @button-text-color: #fff;
-@button-bg-color: @color-deep-azure;
+@button-bg-color: #ddd;
 @button-active-bg-color: #fff;
 @button-border: 1px solid @color-fields-border;
 @button-border-radius: 3px;
